Java8 for TravisCI