@@ -1,11 +1,19 @@
 #!/bin/bash
 mysql -u root -e 'create database drupal;'
 mysql -u root -e "GRANT ALL PRIVILEGES ON drupal.* To 'drupal'@'localhost' IDENTIFIED BY 'drupal';"
-cd $HOME
-cd islandora_tomcat
-export CATALINA_HOME='.'
-export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -Djavax.net.ssl.trustStore=$CATALINA_HOME/fedora/server/truststore -Djavax.net.ssl.trustStorePassword=tomcat"
-./bin/startup.sh
+
+# Java (Oracle)
+sudo apt-get install -y software-properties-common
+sudo apt-get install -y python-software-properties
+sudo add-apt-repository -y ppa:webupd8team/java
+sudo apt-get update
+echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections
+echo debconf shared/accepted-oracle-license-v1-1 seen true | sudo debconf-set-selections
+sudo apt-get install -y oracle-java8-installer
+sudo update-java-alternatives -s java-8-oracle
+sudo apt-get install -y oracle-java8-set-default
+export JAVA_HOME=/usr/lib/jvm/java-8-oracle
+
 cd $HOME
 pear channel-discover pear.drush.org
 pear upgrade --force Console_Getopt
